force-app/main/default/objects/Error_Log__c/fields/Api_Type__c.field-meta.xml
<CustomField>
    <fullName>Api_Type__c</fullName>
    <label>Api_Type</label>
    <type>TextArea</type>
</CustomField>