force-app/main/default/objects/Error_Log__c/fields/endpoint__c.field-meta.xml
<CustomField>
    <fullName>endpoint__c</fullName>
    <label>endpoint</label>
    <type>TextArea</type>
</CustomField>